use min and fix stretched images

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -344,8 +344,7 @@ nav .container {
   position: relative;
   max-width: 100%;
   min-width: 95%;
-  max-height: 450px;
-  min-height: 200px;
+  max-height: 600px;
 }
 .post-image {
   padding: 15px 0;
